--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Quicksand|Roboto" rel="stylesheet">
     <!-- End Google Fonts -->
@@ -26,7 +26,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
             
 </head>
-<body >
+<body class=" elegant-color white-text">
   <app-root></app-root>
 </body>
 </html>
