--- a/src/index.html
+++ b/src/index.html
@@ -29,4 +29,42 @@
 <body class=" elegant-color white-text">
   <app-root></app-root>
 </body>
+<!-- <footer class="page-footer font-small elegant-color-dark white pt-4 mt-4 ">
+
+  <div class="container-fluid text-center text-md-left">
+
+    <div class="row">
+
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <h5 class="text-uppercase">Footer Content</h5>
+        <p>Here you can use rows and columns here to organize your footer content.</p>
+
+      </div>
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <div class="col-md-6 mb-md-0 mb-3">
+
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="https://nglenn.net"> nglenn.net</a>
+  </div>
+
+</footer> -->
+
 </html>
