--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
-  <!-- Google fonts -->
+  <!-- Google  -->
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Quicksand|Roboto" rel="stylesheet">
     <!-- End Google Fonts -->
 
