--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   <!-- Google  -->
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Quicksand|Roboto" rel="stylesheet">
